<resources>
    <string name="app_name">shop</string>
    <string name="action_settings">Settings</string>

    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="catagory">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>

    <string name="addSuccess">添加购物车成功</string>
    <string name="bt_ov">完成</string>
    <string name="cart_price">合计</string>
    <string name="cart_set">编辑</string>
    <string name="ware_list">商品列表</string>
    <string name="share">分享</string>
    <string name="passWord">请输入密码</string>
    <string name="user">请输入账户手机号</string>
    <string name="login">登 录</string>
    <string name="reg">注册账号</string>
    <string name="missPass">忘记密码</string>
    <string name="dingdan">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_addresses">我的地址</string>
    <string name="my_msg">消息</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="create_order">填写订单</string>
    <string name="pay_result">支付结果</string>
    <string name="add_addresses">新建收件地址</string>
    <string name="myOrder">我的订单</string>
</resources>
